--- a/lib/service_worker_example_web/templates/layout/app.html.eex
+++ b/lib/service_worker_example_web/templates/layout/app.html.eex
@@ -31,5 +31,13 @@
 
     </div> <!-- /container -->
     <script src="<%= static_path(@conn, "/js/app.js") %>"></script>
+
+    <script>
+     if('serviceWorker' in navigator) {
+       navigator.serviceWorker.register('/sw.js')
+                .then(function() { console.log("Service Worker Registered"); });
+     }
+    </script>
+
   </body>
 </html>
